Fixed product page not rendering on mobile devices

--- a/static/css/parallax_background.css
+++ b/static/css/parallax_background.css
@@ -32,7 +32,6 @@
   background-position: center;
   background-image: url(/images/pexels-steve-johnson-1047525.jpg);
   background-attachment: fixed;
-  height: 1200px;
 }
 
 .Artists {
